<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/mudi">
        <item android:id="@+id/home_register"
            android:title="@string/app_register"
            android:icon="@mipmap/ic_register_img"/>
        <item android:id="@+id/home_destroy"
            android:title="@string/app_destroy"
            android:icon="@mipmap/ic_login_img"/>
        <item android:id="@+id/home_exit_login"
            android:title="@string/app_exit"
            android:icon="@mipmap/ic_login_img"/>
    </group>
   <group android:checkableBehavior="single" android:id="@+id/se">
       <item android:id="@+id/home_settings"
           android:title="@string/app_settings"
           android:icon="@mipmap/ic_settings_img"/>
       <item android:id="@+id/home_dark_mode"
           android:title="@string/app_dark_mode"
           android:icon="@mipmap/ic_settings_img"/>
       <item android:id="@+id/home_about_us"
           android:title="@string/app_about_us"
           android:icon="@mipmap/ic_about_us_img"/>

   </group>

</menu>